--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+beautifulsoup4==4.6.0
+certifi==2017.7.27.1
+chardet==3.0.4
 google-api-python-client==1.6.4
 httplib2==0.10.3
+lxml==4.0.0
 oauth2client==4.1.2
-selenium==3.6.0
+requests==2.18.4
+uritemplate==3.0.0
+urllib3==1.22
